--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -21,11 +21,14 @@ header {
     z-index: 2;
     display: flex;
     top: 0;
+    
+}
+
+nav {
     box-shadow: 0 0 7px #000;
-    width: 100%;
+    width: 100vw;
     height: 70px;
     background-color: #68228B;
-   
 }
 
 header ul {
@@ -50,9 +53,33 @@ header a {
     margin: 0 15px 0 15px;
 }
 
-.banner {
-    height: 200px;
-    width: screen;
+.burguer-container{
+    cursor: pointer;
+    z-index: 3;
+    position: fixed;
+    right: 5%;
+}
+
+.bar1, .bar2, .bar3{
+    width: 30px;
+    height: 3px;
+    background-color: #68228B;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    transform: rotate(-45deg) translate(-6px, 6px);
+    background-color: #68228B;
+}
+
+.change .bar2 {
+    opacity: 0;
+    background-color: #68228B;
+}
+
+.change .bar3 {
+    transform: rotate(45deg) translate(-6px, -7px);
     background-color: #68228B;
 }
 
@@ -165,4 +192,87 @@ header a {
 
 .description {
     text-shadow: 0px 0px 1px #000;
+}
+
+@media (max-width: 992px) {
+    .burguer-container {
+        display: fixed;
+    }
+
+    .navbar-desktop {
+        display: none;
+    }
+
+    #sobre {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 100%;
+        box-shadow: none;
+        border: none;
+        margin-left: 0;
+    }
+
+    #sobre h2 {
+        text-align: center;
+        width: 90vw;
+        margin-left: 0;
+        font-size: 2.5rem;
+    }
+
+    #sobre article {
+        height: 100px;
+    }
+
+    #sobre article p {
+        width: 95vw;
+        margin-left: 0;
+        font-size: 1.1rem;
+    }
+
+    #criadores {
+        width: 100vw;
+        justify-content: center;
+    }
+
+    .article-1 {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .article-1 h2{
+        font-size: 1.9rem;
+    }
+
+    .article-1 figure img{
+        border-radius: 60%;
+        width: 260px;
+        height: 250px;
+    }
+
+    .article-2 {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .article-2 h2{
+        font-size: 1.9rem;
+    }
+
+    .article-2 figure img{
+        border-radius: 60%;
+        width: 260px;
+        height: 250px;
+        margin-right: 0;
+    }
+
+    .description {
+        width: 95vw;
+    }
+
+}
+
+@media (min-width: 993px) {
+    .burguer-container {
+        display: none;
+    }
 }
