--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,8 +1,10 @@
+
 body {
     margin: 0;
     padding: 0;
     background-color: #B5B5B5;
     color: #68228B;
+    scroll-behavior: smooth;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -21,7 +23,6 @@ header {
     z-index: 2;
     display: flex;
     top: 0;
-    
 }
 
 nav {
@@ -35,7 +36,6 @@ header ul {
     position: relative;
     margin-top: 25px;
     justify-content: space-around;
-
 }
 
 header ul li {
@@ -192,6 +192,7 @@ header a {
 
 .description {
     text-shadow: 0px 0px 1px #000;
+    max-width: 680px;
 }
 
 @media (max-width: 992px) {
