--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -32,6 +32,22 @@ nav {
     background-color: #68228B;
 }
 
+
+.hamburguer {
+    display: none;
+    float: right;
+    right: 10px;
+    background: transparent;
+    border: 0;
+    font-size: 20px;
+    color: #68228B;
+    cursor: pointer;
+}
+
+.hamburguer:focus {
+    outline: none;
+}
+
 header ul {
     position: relative;
     margin-top: 25px;
@@ -51,36 +67,6 @@ header a {
     text-shadow: 1px 1px 1px #000;
     text-align: center;
     margin: 0 15px 0 15px;
-}
-
-.burguer-container{
-    cursor: pointer;
-    z-index: 3;
-    position: fixed;
-    right: 5%;
-}
-
-.bar1, .bar2, .bar3{
-    width: 30px;
-    height: 3px;
-    background-color: #68228B;
-    margin: 6px 0;
-    transition: 0.4s;
-}
-
-.change .bar1 {
-    transform: rotate(-45deg) translate(-6px, 6px);
-    background-color: #68228B;
-}
-
-.change .bar2 {
-    opacity: 0;
-    background-color: #68228B;
-}
-
-.change .bar3 {
-    transform: rotate(45deg) translate(-6px, -7px);
-    background-color: #68228B;
 }
 
 #sobre {
@@ -195,22 +181,62 @@ header a {
     max-width: 680px;
 }
 
-@media (max-width: 992px) {
-    .burguer-container {
-        display: fixed;
+@media screen and (max-width: 992px) {
+
+    header {
+        
+        position: absolute;
     }
 
-    .navbar-desktop {
+    nav {
+        position: fixed;
+        float: right;
+        top: 0;
+        background: none;
+        border: none;
+        box-shadow: none;
+        height: 30px;
+        width: screen;
+    }
+
+    .nav-ul {
         display: none;
+    }
+
+    .nav-ul a{
+        margin: 5px 0 5px 0;
+        padding: 0;
+    }
+
+    .nav-ul.show {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background: #68228B;
+        color: #B5B5B5;
+        text-shadow: 0 0 2px #000;
+    }
+
+
+    .hamburguer { 
+        position: fixed;
+        display: block;
+        top: 20px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+    
+    .hamburguer:focus { 
+        color: #B5B5B5;
     }
 
     #sobre {
         margin-top: 10px;
         margin-bottom: 10px;
-        width: 100%;
         box-shadow: none;
         border: none;
-        margin-left: 0;
+        left: 0;
+        transform: translate(0);
     }
 
     #sobre h2 {
@@ -272,8 +298,4 @@ header a {
 
 }
 
-@media (min-width: 993px) {
-    .burguer-container {
-        display: none;
-    }
-}
+
