--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -74,30 +74,19 @@ header a {
     left: 50%;
     transform: translate(-50%);
     display: flex;
-    flex-direction: column;
+    padding: 45px;
     margin: 200px 0 80px 0;
-    max-height: 350px;
-    width: 80%;
+    height: 400px;
+    width: 65%;
     border: 1px solid rgba(0, 0, 0, 0.6);
     border-radius: 30px;
     box-shadow: 0 0 20px #000;
 }
 
-#sobre h2{
+#sobre iframe {
     position: relative;
-    left: 5%;
-    margin-top: 80px;
-    margin-left: 100px;
-    font-size: 3.5rem;
-    font-weight: bolder;
-    text-shadow: 0px 0px 3px #000;
-    
-}
-
-#sobre article{
-    height: 350px;
-    margin: 0;
-    text-align: center;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 #sobre article p{
@@ -128,6 +117,11 @@ header a {
     transform: translate(-50%);
 }
 
+#criadores #titulo {
+    text-align: center;
+    font-size: 4rem;
+    text-shadow: 0px 0px 3px #000;
+}
 .article-1 h2 {
     font-size: 3rem;
     font-weight: bolder;
@@ -249,30 +243,23 @@ footer a:hover {
     
 
     #sobre {
+        display: flex;
         margin-top: 10px;
         margin-bottom: 10px;
         box-shadow: none;
         border: none;
         width: 90%;
         left: 0;
+        padding: 0;
         transform: translate(0);
+        align-content: center;
+        justify-content: center;
     }
 
-    #sobre h2 {
-        text-align: center;
-        width: 90vw;
-        margin-left: 0;
-        font-size: 2.5rem;
-    }
-
-    #sobre article {
-        height: 100px;
-    }
-
-    #sobre article p {
-        width: 95vw;
-        margin-left: 0;
-        font-size: 1.1rem;
+    #sobre iframe {
+        height: 300px;
+        margin: auto;
+        left: 40%;
     }
 
     #criadores {
